--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 	
-<link rel="stylesheet" href="/athena-site-institucional/assets/index.C6H_hl-m.css"></head>
+<link rel="stylesheet" href="/athena-site-institucional/assets/index.B2ULrU6a.css"></head>
 
 
 <html lang="pt-br">
@@ -118,7 +118,7 @@
 	
 
 
-	<section class="content-line bg-neutral-300 relative secao" id="servicos">	
+	<section class="content-line bg-green-50 relative secao" id="servicos">	
 		
 		<div class="content-line-container py-20">
 
