--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -21,7 +21,7 @@
 
 
 	
-<link rel="stylesheet" href="/athena-site-institucional/assets/index.C6H_hl-m.css"></head>
+<link rel="stylesheet" href="/athena-site-institucional/assets/index.B2ULrU6a.css"></head>
 
 <html lang="pt-br">
 	<head>
