--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -21,7 +21,7 @@
 
 
 	
-<link rel="stylesheet" href="/athena-site-institucional/assets/index.C2HckBuA.css"></head>
+<link rel="stylesheet" href="/athena-site-institucional/assets/index.DcAsIET9.css"></head>
 
 <html lang="pt-br">
 	<head>
@@ -40,7 +40,7 @@
 		<header class="content-line main-header">
   <div class="content-line-container ">
       <a href="/athena-site-institucional/">
-        <img src="/athena-site-institucional/assets/img/janus-logo-horizontal.webp" alt="Janus Educare - Consultoria" class="max-w-40 main-header__logo">
+        <img src="/athena-site-institucional/assets/img/logo-athena.png" alt="Plataforma Athena" class="max-w-40 main-header__logo">
       </a>
       <nav>
         <ul class="flex items-center gap-3">
