--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -21,7 +21,7 @@
 
 
 	
-<link rel="stylesheet" href="/athena-site-institucional/assets/index.DcAsIET9.css"></head>
+<link rel="stylesheet" href="/athena-site-institucional/assets/index.BE8nk02L.css"></head>
 
 <html lang="pt-br">
 	<head>
