--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -21,7 +21,7 @@
 
 
 	
-<link rel="stylesheet" href="/athena-site-institucional/assets/index.BE8nk02L.css"></head>
+<link rel="stylesheet" href="/athena-site-institucional/assets/index.Dg1MSHkF.css"></head>
 
 <html lang="pt-br">
 	<head>
