--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 	
-<link rel="stylesheet" href="/athena-site-institucional/assets/index.Dg1MSHkF.css"></head>
+<link rel="stylesheet" href="/athena-site-institucional/assets/index.CK_R8Bgl.css"></head>
 
 
 <html lang="pt-br">
