--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -21,7 +21,7 @@
 
 
 	
-<link rel="stylesheet" href="/athena-site-institucional/assets/index.DzSMOg_v.css"></head>
+<link rel="stylesheet" href="/athena-site-institucional/assets/index.CNQJ_Jj2.css"></head>
 
 <html lang="pt-br">
 	<head>
@@ -301,7 +301,7 @@
   </div>  
 
   <div class="form-group">
-    <div class="g-recaptcha" data-sitekey="6LcQNHIrAAAAANg9mUUWtFLkbmRIL9ONZqIcTxOS"></div>
+    <div class="g-recaptcha" data-sitekey="6LdBN3IrAAAAAEZ8uF1sgEeMz193Bgi34dIl3o85"></div>
   </div>
   
   <div class="form-group">
